--- a/templates/answering.html
+++ b/templates/answering.html
@@ -2,8 +2,10 @@
 <html>
   <head>
     <title>Poll {{ roomCode }}</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300&family=Roboto+Mono:ital,wght@1,100&display=swap" rel="stylesheet">
   </head>
-  <body>
+  <body id = "answeringBody">
     <h2 id="question">Waiting for Questions...</h2>
     <div id="options"></div>
     <script>
