--- a/templates/host.html
+++ b/templates/host.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="style.css">
     <title>Hosting Poll</title>
     <style>      
       /* The Modal (background) */
