--- a/templates/index.html
+++ b/templates/index.html
@@ -2,11 +2,13 @@
 <html>
   <head>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Playfair+Display&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
     <title>Quick Polling</title>
   </head>
-  <body>
-    <h1>Quick Polling</h1>
-    <button onclick="window.location.href='/host'">Start a Poll</button>
-    <button onclick="window.location.href='/join'">Join a Poll</button>
+  <body id = "indexBody">
+    <h1 id = "quickPolling">Quick Polling</h1>
+    <button id = "indexButton" onclick="window.location.href='/host'">Start a Poll</button>
+    <button id = "indexButton" onclick="window.location.href='/join'">Join a Poll</button>
   </body>
 </html>
