--- a/templates/answering.html
+++ b/templates/answering.html
@@ -3,7 +3,8 @@
   <head>
     <title>Poll {{ roomCode }}</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300&family=Roboto+Mono:ital,wght@1,100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Playfair+Display&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
   </head>
   <body id = "answeringBody">
     <h2 id="question">Waiting for Questions...</h2>
